// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`renders DialogGenerator without buttons 1`] = `
<div
  aria-describedby="eds-dialog-customcontent"
  aria-labelledby="eds-dialog-title"
  aria-modal={true}
  className="sc-cBNfnY gvVtXL"
  role="dialog"
  tabIndex={0}
>
  <div
    className="sc-jcVebW gncZGd"
    id="eds-dialog-title"
  >
    This is the title
  </div>
  <hr
    className="sc-jrAGrp duBmmQ sc-bZSQDF QRFwg"
  />
  <div
    className="sc-iUuytg cHAQWi"
    id="eds-dialog-customcontent"
  >
    <p>
      Hello from the inside
    </p>
  </div>
</div>
`;

exports[`renders full DialogGenerator 1`] = `
<div
  aria-describedby="eds-dialog-customcontent"
  aria-labelledby="eds-dialog-title"
  aria-modal={true}
  className="sc-cBNfnY gvVtXL"
  role="dialog"
  style={
    Object {
      "width": "300px",
    }
  }
  tabIndex={0}
>
  <div
    className="sc-jcVebW gncZGd"
    id="eds-dialog-title"
  >
    This is the title
  </div>
  <hr
    className="sc-jrAGrp duBmmQ sc-bZSQDF QRFwg"
  />
  <div
    className="sc-iUuytg cHAQWi"
    id="eds-dialog-customcontent"
  >
    <p>
      Hello from the inside
    </p>
  </div>
  <div
    className="sc-citwmv jgLzeC footer"
  >
    <button
      className="sc-gsTCUz gLPsnZ"
      disabled={false}
      onClick={[MockFunction]}
      tabIndex={0}
      type="button"
    >
      <span
        className="sc-bdfBwQ ibGDsh"
      >
        I changed my mind
      </span>
    </button>
    <button
      className="sc-gsTCUz ROJxf"
      disabled={false}
      onClick={[MockFunction]}
      tabIndex={0}
      type="button"
    >
      <span
        className="sc-bdfBwQ ibGDsh"
      >
        I agree
      </span>
    </button>
  </div>
</div>
`;
